[workspace]
members = ["crates/core", "crates/cli", "crates/wasm"]
# Native `cargo build`/`test` skip the wasm crate; it is built for wasm via wasm-pack.
default-members = ["crates/core", "crates/cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ashirokikh/mslx"
