[package]
name = "mslx-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Browser (wasm) bindings for mslx-core: export an MS Learn cert/exam/path to an EPUB entirely client-side."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mslx-core = { path = "../core" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
async-trait = "0.1"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = ["Window", "Request", "Response"]
